--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=Personal Banking Recommender
 application.recommendations-db.url=jdbc:h2:file:./transaction
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.hikari.read-only=true
 
 
